--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,12 +22,15 @@
       </tr>
       
       <tr>
+        <td>メールアドレス</td>
+        <td><%= @user.email %></a></td>
+      </tr>
+      
+      <tr>
         <td>Webサイト</td>
-        <td><%= @user.web_site %></td>
+        <td><a href= <%= @user.web_site %>><%= @user.web_site %></a></td>
       </tr>
       
     </table>
   </div>
 </div>
-
-<a href="<%= @user.email %>" class="btn btn-primary">お問い合わせ</a>
