--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,4 +3,33 @@
 
 <h1>主催者</h1>
 
-<a href="#" class="btn btn-primary">お問い合わせ</a>
+<div class="row">
+  <aside class="col-sm-4">
+    <div class="card">
+      <div class="card-header">
+        <h3 class="card-title"><%= @project.user.name %></h3>
+      </div>
+      <div class="card-body">
+        <img class="rounded img-fluid" src="<%= gravatar_url(@user, { size: 500 }) %>" alt="">
+      </div>
+    </div>
+  </aside>
+  <div class="col-sm-8">
+    <table class="table">
+      <tr>
+        <td>名称</td>
+        <td><%= @project.user.name %></td>
+      </tr>
+      
+      <tr>
+        <td>所在地</td>
+        <td><%= @project.user.address %></td>
+      </tr>
+      
+      <tr>
+        <td>メールアドレス</td>
+        <td><%= @project.user.email %></a></td>
+      </tr>
+    </table>
+  </div>
+</div>
