--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,6 +19,8 @@
               <li class="dropdown-item"><%= link_to 'プロフィール', user_path(current_user), class: 'nav-link' %></li>
               <li class="dropdown-divider"></li>
               <li class="dropdown-item"><%= link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link' %></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"><%= link_to 'アカウント削除', @user, method: :delete, data: { confirm: '本当に削除してよろしいですか？' }  %></li>
             </ul>
           </div>
         <% else %>
