--- a/app/views/projects/_projects.html.erb
+++ b/app/views/projects/_projects.html.erb
@@ -8,7 +8,7 @@
             <%= link_to project.user.name, user_path(project.user), class: "text-decoration-none" %>
           </div>
           <div>
-            <%= link_to project.project_name, project %>
+            <%= link_to project.project_name, project, class: "text-decoration-none text-dark" %>
           </div>
         </div>
       </li>
