--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,20 +1,19 @@
 <header class="mb-4">
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-success">
     <div class="container-fluid ps-5 pe-5">
-      <label></label>
       <a class="navbar-brand" href="/">EdLink</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
       </button>
       
-      <div class="container-fluid ps-5 pe-5">
+      <div class="container-fluid ps-5 pe-5 text-center">
         <%= link_to "プロジェクト作成", new_project_path, class: "btn btn-warning" %>
       </div>
 
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <% if logged_in? %>
-          <div class="btn-group">
-            <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><%= current_user.name %></button>
+          <div class="btn-group ">
+            <button type="button" class="btn bg-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><%= current_user.name %></button>
             <ul class="dropdown-menu dropdown-menu-end">
               <li class="dropdown-item"><%= link_to 'プロフィール', user_path(current_user), class: 'nav-link' %></li>
               <li class="dropdown-divider"></li>
