--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,7 @@
-<h1><%= @project.project_name %></h1>
-<p><%= @project.explanation %></p>
+<div class="mb-5">
+  <h1><%= @project.project_name %></h1>
+  <p><%= @project.explanation %></p>
+</div>
 
 <h1>主催者</h1>
 
@@ -7,7 +9,7 @@
   <aside class="col-sm-4">
     <div class="card">
       <div class="card-header">
-        <h3 class="card-title"><%= @project.user.name %></h3>
+        <h3 class="card-title text-center"><%= @project.user.name %></h3>
       </div>
       <div class="card-body">
         <img class="rounded img-fluid" src="<%= gravatar_url(@user, { size: 500 }) %>" alt="">
